--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</section>
 				<section>
 					<h3>Attachment search</h3>
-					<video controls data-src=""></video>
+					<video controls data-src="sprint-demo.mkv"></video>
 				</section>
 
 				<section>
