--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@
 
 				<section>
 					<h3>Mail groups backend</h3>
-					<video controls data-src="GroupDemoUncut.mp4"></video>
+					<video controls data-src="GroupDemoUncut.webm"></video>
 				</section>
 				<section>
 					<h3>Download as EML</h3>
-					<video controls data-src="download_eml.mp4"></video>
+					<video controls data-src="download_eml.webm"></video>
 				</section>
 				<section>
 					<h3>Attachment search</h3>
-					<video controls data-src="sprint-demo.mkv"></video>
+					<video controls data-src="sprint-demo.webm"></video>
 				</section>
 
 				<section>
