--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 				<section>
 					<h3>Mail groups backend</h3>
-					<video controls data-src="GroupDemoUncut.webm"></video>
+					<video controls data-src="GroupDemoUncut2.webm"></video>
 				</section>
 				<section>
 					<h3>Download as EML</h3>
